Fixed alignment

--- a/webapp/static/css/modal-add-edit.css
+++ b/webapp/static/css/modal-add-edit.css
@@ -56,6 +56,7 @@
 #edit-student-form label[for="student-id"],
 #edit-student-form label[for="first-name"],
 #edit-student-form label[for="last-name"],
+#edit-student-form label[for="course-name"],
 #edit-student-form label[for="student-photo"],
 
 #add-course-form label[for="course-code"],
